Bug 144527 - Crash on shutdown from systray context menu
Summary: Crash on shutdown from systray context menu
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-22 18:19 UTC by Torquil Macdonald Sørensen
Modified: 2008-03-09 21:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Torquil Macdonald Sørensen 2007-04-22 18:19:36 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    Debian testing/unstable Packages
OS:                Linux

When I shut down kopete from the context menu in the system tray, while having two chats open (separate tabs in same window), kopete crashed. The KDE crash handler appeared, and gave the following debug info:

(no debugging symbols found)
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1240140096 (LWP 4564)]
[KCrash handler]
#9  0xb63939d0 in __dynamic_cast () from /usr/lib/libstdc++.so.6
#10 0xb59c81fe in JabberChatSession::~JabberChatSession ()
   from /usr/lib/kde3/kopete_jabber.so
#11 0xb6983b65 in ~QObject (this=0x81c6af0) at kernel/qobject.cpp:497
#12 0xb7ec4915 in Kopete::Account::~Account () from /usr/lib/libkopete.so.1
#13 0xb7ee6ac2 in Kopete::PasswordedAccount::~PasswordedAccount ()
   from /usr/lib/libkopete.so.1
#14 0xb59eee8a in JabberAccount::~JabberAccount ()
   from /usr/lib/kde3/kopete_jabber.so
#15 0xb697f41e in QObject::event (this=0x81c6af0, e=0x834f628)
    at kernel/qobject.cpp:750
#16 0xb6917c26 in QApplication::internalNotify (this=0xbf8e28fc, 
    receiver=0x81c6af0, e=0x834f628) at kernel/qapplication.cpp:2635
#17 0xb6919a43 in QApplication::notify (this=0xbf8e28fc, receiver=0x81c6af0, 
    e=0x834f628) at kernel/qapplication.cpp:2358
#18 0xb70c9e0e in KApplication::notify (this=0xbf8e28fc, receiver=0x81c6af0, 
    event=0x834f628)
    at /tmp/buildd/kdelibs-3.5.5a.dfsg.1/./kdecore/kapplication.cpp:550
#19 0xb68ab421 in QApplication::sendEvent (receiver=0x81c6af0, 
    event=0x834f628) at ../include/qapplication.h:520
#20 0xb6918c4e in QApplication::sendPostedEvents (receiver=0x0, event_type=0)
    at kernel/qapplication.cpp:3299
#21 0xb6918d56 in QApplication::sendPostedEvents ()
    at kernel/qapplication.cpp:3210
#22 0xb68bed6f in QEventLoop::processEvents (this=0x8152ff0, flags=4)
    at kernel/qeventloop_x11.cpp:202
#23 0xb6932179 in QEventLoop::enterLoop (this=0x8152ff0)
    at kernel/qeventloop.cpp:198
#24 0xb6931f9a in QEventLoop::exec (this=0x8152ff0)
    at kernel/qeventloop.cpp:145
#25 0xb69197bf in QApplication::exec (this=0xbf8e28fc)
    at kernel/qapplication.cpp:2758
#26 0x0807e060 in ?? ()
#27 0xbf8e28fc in ?? ()
#28 0xbf8e2a30 in ?? ()
#29 0xbf8e2a28 in ?? ()
#30 0x00000000 in ?? ()


Best regards,
Torquil M. Sørensen
Comment 1 Torquil Macdonald Sørensen 2007-05-21 18:55:05 UTC
This is a recurring problem for me, and the other backtraces have been equivalent to the one above (with slightly different line number indications since the software versions differ a bit; I now use KDE 3.5.6)
Comment 2 Oliver Putz 2008-02-01 21:43:23 UTC
This bug should still be valid in KDE4 (see bug #157086)
Comment 3 Roman Jarosz 2008-03-09 20:33:33 UTC
SVN commit 783849 by rjarosz:

Fix bug 144527: Crash on shutdown from systray context menu
Jabber was using already deleted objects.

BUG: 144527



 M  +10 -3     kopetechatsession.cpp  
 M  +3 -0      kopetechatsession.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=783849
Comment 4 Roman Jarosz 2008-03-09 21:56:09 UTC
SVN commit 783871 by rjarosz:

Backport fix for bug 144527: Crash on shutdown from systray context menu
Jabber was using already deleted objects.

CCBUG: 144527



 M  +10 -3     kopetechatsession.cpp  
 M  +3 -0      kopetechatsession.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=783871