Fix bug 144527: Crash on shutdown from systray context menu Jabber was using already deleted objects.

BUG: 144527


svn path=/trunk/KDE/kdenetwork/kopete/; revision=783849